# ibis_issue

./: README.md  docker-compose.yaml  pyproject.toml  runme.py
hive/: metastore-site.xml
trino/etc/: jvm.config
trino/etc/catalog/: hive.properties  iceberg.properties  memory.properties  postgres.properties
